--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Aashish</title>
-        <link rel="stylesheet" href="CSS/styles.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="favicon.ico">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sarcamento">
     </head>
